# FinXCloud

./: .gitignore  README.md  index.html  pyproject.toml
docs/: USER_GUIDE.md  iam-policy.md
finxcloud/: __init__.py  cli.py
finxcloud/analyzer/: __init__.py  anomaly.py  budget.py  commitments.py  cost_explorer.py  recommendations.py  tags.py  utilization.py
finxcloud/auth/: credentials.py  organizations.py
finxcloud/email/: __init__.py  sender.py  templates.py
finxcloud/integrations/: __init__.py  events.py
finxcloud/integrations/slack/: __init__.py  bot.py  client.py  commands.py  completion_summary.py  formatters.py  notifier.py  paperclip_client.py  poller.py
finxcloud/notifications/: __init__.py  webhook.py
finxcloud/output/: html_writer.py  json_writer.py  pdf_writer.py  s3_writer.py
finxcloud/providers/: __init__.py  base.py
finxcloud/providers/aws/: __init__.py  provider.py
finxcloud/providers/azure/: __init__.py  auth.py  cost.py  provider.py  scanners.py
finxcloud/providers/gcp/: __init__.py  auth.py  cost.py  provider.py  scanners.py
finxcloud/reporter/: detailed.py  roadmap.py  summary.py
finxcloud/scanner/: base.py  ec2.py  lambda_.py  networking.py  opensearch.py  rds.py  s3.py
finxcloud/scheduler/: __init__.py  executor.py  scheduler.py
finxcloud/web/: __init__.py  app.py  auth.py  deploy.py  storage.py
finxcloud/web/static/: index.html
samples/: summary_report_sample.json
scripts/: send_status_report.py
