[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finxcloud"
version = "0.1.0"
description = "AWS Cost Optimization Tool — FinXCloud PoC"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
]
pdf = [
    "reportlab>=4.1.0",
]
dev = [
    "pytest>=7.0",
    "moto>=5.0",
    "ruff>=0.3.0",
]

[project.scripts]
finxcloud = "finxcloud.cli:main"

[tool.setuptools.packages.find]
include = ["finxcloud*"]

[tool.ruff]
target-version = "py311"
line-length = 100
